...

@Serializable
data class CertificateMaterial(val ca: String, val caKey: String, val certificate: String, val key: String)

enum class ClientOs(val label: String, val filename: String, val guide: String) {
    ANDROID("Android", "android.cer", "https://support.google.com/pixelphone/answer/2844832?hl=es"),
    IOS("iPhone / iPad", "ios.mobileconfig", "https://support.apple.com/es-es/102390"),
    WINDOWS("Windows", "windows.cer", "https://learn.microsoft.com/es-es/windows-hardware/drivers/install/trusted-root-certification-authorities-certificate-store"),
    MACOS("macOS", "macos.cer", "https://support.apple.com/es-es/guide/keychain-access/kyca11871/mac"),
}

data class EnrollmentSession(val url: String, val expiresAt: Long, val os: ClientOs)

data class HttpsStatus(
...
